# arctic-bn

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  README.md  pyproject.toml  ruff.toml  setup.py  stripout.sh
climate_network/: plotting.py
climate_network/core/: cpd.py  lgbn.py
climate_network/fortran/: routines.f90
data/: era5.py
notebooks/: data_exploration.ipynb
tests/: test_routines.py
